# sqtoy

./: Cargo.toml  LICENSE  README.md
shaders/: rect_150.glslf
src/: main.rs
