[package]
name = "sqtoy"
version = "0.1.0"
authors = ["Сухарик <suhr@i2pmail.org>"]

[dependencies]
image = "*"
rand = "*"
# gfx = "0.18.1"
# gfx_window_glutin = { path = "../gfx_window_glutin", version = "0.33.1" }
# glutin = "0.24.1"
# glutin = "0.22.1"
# glutin = "0.21.0"


gfx_window_glutin = "0.31.0"
glutin = "0.21.0"
gfx = "0.18.1"

[profile.release]
lto = true
